Fixed contrast and headings

--- a/css/style.css
+++ b/css/style.css
@@ -471,7 +471,7 @@ a.util-icon {
 /* breadcrumbs */
 
 .breadcrumbs span, .breadcrumbs a {
-    color: #808080;
+    color: #757575;
 }
 
 /** intro **/
